# chordle

./: Makefile  README.md  clt-extra.json  clt1.json  clt2.json  clt3.json  clt4-semester1.json  clt4-semester2.json  clt5-semester1.json  clt5-semester2.json  combine-clt-and-extra.py  dictionaries.json  elm.json  extra-clt1.json  extra-clt2.json  extra-clt3.json  extra-clt4-semester1.json  extra-clt4-semester2.json  extra-clt5-semester1.json  extra-clt5-semester2.json  index.html  npcr-clt1-words.json  npcr-clt2-words.json  npcr-clt3-words.json  npcr-clt4-words.json  release-elm.sh  words.json
backend/: .gitignore  Cargo.toml  Dockerfile  gleam.toml  manifest.toml  package.sh  release-gleam.sh
backend/docker/: Dockerfile
backend/migrations/: 001.sql
backend/src/: api.gleam  api.rs  chordle_server.gleam  db.gleam  main.rs  utils.gleam
backend/src/migrations/: 001.sql  002.sql  003.sql
backend/test/: chordle_server_test.gleam
elm/: Makefile  elm-watch.json  elm.json
elm/review/: elm.json
elm/review/src/: ReviewConfig.elm
elm/src/: Backend.elm  Changelog.elm  Clipboard.elm  Common.elm  Daily.elm  DailyProgress.elm  Help.elm  Icons.elm  Main.elm  MobileUI.elm  Numbers.elm  Storage.elm  Tones.elm  Training.elm  UI.elm  Utils.elm  WordChain.elm  WordChainPopup.elm  Words.elm
elm/tests/: GameTest.elm  NumbersTest.elm  WordsTest.elm
src/: Backend.elm  Common.elm  Daily.elm  Help.elm  Icons.elm  Main.elm  MobileUI.elm  Notifications.elm  Tones.elm  Training.elm  UI.elm  WordChain.elm  Words.elm
static/: dictionaries.json  index.html
tests/: GameTest.elm
