[package]
name = "chordle-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
postgres = "0.19.5"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
chrono = "0.4.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres"]


